--- a/src/components/SuccessPage/style.sass
+++ b/src/components/SuccessPage/style.sass
@@ -142,11 +142,14 @@ $color-border-star: $white
       fill: $color-bg-step
 
   &__text
-    font-weight: 500
+    font-weight: 400
     font-size: 1.125rem
     text-align: center
 
     color: $color-typo-dark-primary
+
+    b
+      font-weight: 500
 
 .success-page
   &__text
