--- a/src/components/Button/style.sass
+++ b/src/components/Button/style.sass
@@ -37,26 +37,34 @@
     &_colored
       color: $white
       background-color: $orange-1
+
+      &:not(:disabled):active
+        border-color: $orange-1
+        background-color: $white
+        color: $orange-1
+
     &_transparent-light
       border-color: $white
       color: $white
       background-color: transparent
 
       &:not(:disabled)
-        &:hover
+        &:active
+          background-color: $white
+          color: $grey-dark-2
+        &:hover:not(:active)
           border-color: $orange-pale-3
           background-color: $orange-pale-3
           color: $grey-dark-2
-        &:active
-          background-color: $white
-          color: #2D2B2F
 
     &_transparent-dark
-      border: 1px solid #292929
-      color: #292929
-      &:hover:not(:disabled)
-        color: #FFA800
-      &:active
-        background: #FFA800
-        border-color: #FFA800
-        color: #2D2B2F
+      border: 1px solid $grey-dark-3
+      color: $grey-dark-3
+
+      &:not(:disabled)
+        &:active
+          background: $orange-1
+          border-color: $orange-1
+          color: $grey-dark-2
+        &:hover:not(:active)
+          color: $orange-1
