--- a/src/components/PageHeader/style.sass
+++ b/src/components/PageHeader/style.sass
@@ -6,6 +6,7 @@
   line-height: 42px
 
   color: #e5e5e5
+  user-select: none
 
   &__wrapper
     background-color: rgba(0, 0, 0, 0.6)
@@ -29,7 +30,6 @@
     @include section-width
 
   &__item
-    padding: 25px 5px
     font-weight: 300
     font-size: 30px
     line-height: 35px
@@ -40,5 +40,7 @@
       color: #FFCA62
 
 .menu-link
+  display: block
+  padding: 25px 5px
   color: #ffffff
   transition: 0.25s
