Add useOnClickOutside to DatePicker, fix form bugz & other things

--- a/src/components/MainPage/style.sass
+++ b/src/components/MainPage/style.sass
@@ -99,6 +99,10 @@
 
     margin-bottom: 100px
 
+  .link__button
+    width: 100%
+    max-width: 325px
+
   &__list
     display: flex
     justify-content: space-between
@@ -167,7 +171,7 @@
   text-align: left
 
   @include to(desktop)
-  width: 100%
+    width: 100%
 
 .reviews
   padding-block: 8% 6.25%
