--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -180,13 +180,15 @@ $color-border-primary: $grey-light-2
     padding-block: 10px
 
   &_label
-    display: block
+    display: flex
+    flex-direction: column
+    gap: 15px
 
     &:not(:last-child)
       margin-bottom: 25px
 
   &_title
-    margin-bottom: 15px
+    font-weight: 400
 
 .form__switch_list
   padding-left: 35px
