--- a/src/components/SearchTicketsForm/style.sass
+++ b/src/components/SearchTicketsForm/style.sass
@@ -93,3 +93,6 @@ button.tickets__form_button_submit
 
   text-transform: uppercase
   color: #292929
+
+.form__input_city-select
+  text-transform: capitalize
