--- a/src/components/DatePicker/style.sass
+++ b/src/components/DatePicker/style.sass
@@ -1,13 +1,14 @@
+.date-picker__wrapper
+  position: absolute
+  z-index: 100
+  top: 100%
+  margin-top: 25px
+
 .rdp
   background: white
   border-radius: 5px
   position: relative
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%)
-
-  position: absolute
-  z-index: 100
-  top: 100%
-  margin-top: 50px
 
   --rdp-cell-size: 45px
   --rdp-background-color: #ffe4b0
