--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -89,6 +89,7 @@ $color-border-primary: $grey-light-2
 
   &_city
     font-size: 1.125rem
+    text-transform: capitalize
 
   &_name
     color: $color-typo-grey-secondary
