Add seat selection from forms

--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -167,7 +167,7 @@ $color-border-primary: $grey-light-2
 
   &_price
     font-weight: 700
-    font-size: 3rem
+    font-size: 2.5rem // 3rem по макету
     color: #FFA800
 
   &_currency
