--- a/src/components/OrderPage/OrderStep/ChoosePlacesStep/PlaceSelection/PlaceSelectionMap/style.sass
+++ b/src/components/OrderPage/OrderStep/ChoosePlacesStep/PlaceSelection/PlaceSelectionMap/style.sass
@@ -1,4 +1,4 @@
-@import 'styles/variables'
+@import 'shared/ui/styles/variables'
 
 $color-bg-place-default: $grey-light-1
 $color-bg-place-unavailable: $grey-light-4
