--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -1,5 +1,5 @@
-@import 'styles/variables'
-@import 'styles/mixins'
+@import 'shared/ui/styles/variables'
+@import 'shared/ui/styles/mixins'
 
 $color-typo-white-primary: $white
 $color-typo-grey-primary: $grey-light-2
