--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -1,5 +1,5 @@
-@import 'styles/variables'
-@import 'styles/mixins'
+@import 'shared/ui/styles/variables'
+@import 'shared/ui/styles/mixins'
 
 $height-stepper: 95px
 
