--- a/src/components/SuccessPage/style.sass
+++ b/src/components/SuccessPage/style.sass
@@ -1,5 +1,5 @@
-@import 'styles/variables'
-@import 'styles/mixins'
+@import 'shared/ui/styles/variables'
+@import 'shared/ui/styles/mixins'
 
 $color-typo-dark-primary: $grey-dark-3
 $color-typo-dark-secondary: $grey-dark-1
