--- a/src/widgets/footer/ui/style.sass
+++ b/src/widgets/footer/ui/style.sass
@@ -1,5 +1,5 @@
-@import 'styles/variables'
-@import 'styles/mixins'
+@import 'shared/ui/styles/variables'
+@import 'shared/ui/styles/mixins'
 
 $color-typo-primary: $grey-light-2
 $color-typo-secondary: $white
