--- a/src/components/MainPage/style.sass
+++ b/src/components/MainPage/style.sass
@@ -1,7 +1,17 @@
 @import 'styles/variables'
 @import 'styles/mixins'
 
+.hero::before, .features__wrapper::before
+  background-size: cover
+  position: absolute
+  content: ''
+  inset: 0
+  z-index: -1
+
 .hero
+  position: relative
+  z-index: 1
+
   display: flex
   flex-direction: column
   justify-content: space-between
@@ -11,9 +21,12 @@
   min-height: calc(100vh - 100px)
   border-bottom: 8px solid #ffa800
 
-  background-image: url("/assets/train_background.png")
-  background-size: cover
-  background-color: #ffa800
+  // background-color: #ffa800
+  background-color: #9B6909
+
+.hero::before
+  opacity: 0.7
+  background-image: url("/assets/train_background.jpg")
 
 .hero_content
   display: flex
@@ -88,9 +101,13 @@
   color: #fff
 
   &__wrapper
-    background-image: url('/assets/railway_background.png')
-    background-size: cover
+    position: relative
+    z-index: 1
     background-color: #ffa800
+
+    &::before
+      opacity: 0.5
+      background-image: url('/assets/railway_background.jpg')
 
   &__header
     display: flex
