fix: fix cross-browser issues

--- a/src/components/OrderPage/OrderInput/style.sass
+++ b/src/components/OrderPage/OrderInput/style.sass
@@ -4,7 +4,7 @@
   width: 100%
 
 .order__input
-  display: block
+  // display: block
   padding-inline: 15px
   height: 50px
   box-sizing: border-box
@@ -62,8 +62,7 @@
 
   &_input
     position: absolute
-    width: 0
-    height: 0
+    appearance: none
 
     &_checked-icon
       display: none
