--- a/src/components/OrderPage/OrderStep/ChoosePlacesStep/PlaceSelection/PlacesTable/style.sass
+++ b/src/components/OrderPage/OrderStep/ChoosePlacesStep/PlaceSelection/PlacesTable/style.sass
@@ -69,6 +69,11 @@ $color-typo-grey-light: $grey-1
     cursor: pointer
     transition: 0.1s
 
+    &_icon
+      display: block
+      width: 100%
+      max-height: 100%
+
     &:hover
       background: #FFA800
 
