--- a/src/components/OrderPage/OrderStep/style.sass
+++ b/src/components/OrderPage/OrderStep/style.sass
@@ -95,8 +95,7 @@
 
   &__input
     position: absolute
-    width: 0
-    height: 0
+    appearance: none
 
     &:checked + .online-payment-methods__label_text
       color: #FFA800
@@ -158,8 +157,7 @@
 
 .amount-per-page__input
   position: absolute
-  width: 0
-  height: 0
+  appearance: none
 
   &:checked + .amount-per-page__input_span
     color: black
