--- a/src/components/OrderPage/style.sass
+++ b/src/components/OrderPage/style.sass
@@ -5,6 +5,7 @@ $height-stepper: 95px
 
 .order-page__hero
   background-image: url('/assets/station_background.jpg')
+  background-color: #928f94
   background-size: cover
 
 .steps__list
