--- a/src/components/Input/style.sass
+++ b/src/components/Input/style.sass
@@ -3,6 +3,8 @@
 $color-bg-input: $white
 
 .input__container
+  position: relative
+
   display: flex
   align-items: stretch
 
@@ -33,40 +35,55 @@ $color-bg-input: $white
   background: transparent
   position: relative
 
-  &[type="date"][value=""]
-    text-transform: uppercase
-
-    &:not(:focus)::before
-      content: "ДД/ММ/ГГГГ"
-      position: absolute
-      top: 0
-      bottom: 0
-      width: 100%
-      display: flex
-      align-items: center
-      background: white
-      color: #E5E5E5
-      pointer-events: none
-
   &::placeholder
     color: #E5E5E5
 
-input[type="date"]::-webkit-inner-spin-button,
-input[type="date"]::-webkit-calendar-picker-indicator
-  display: none
-  // -webkit-appearance: none
-  // appearance: none
+.date-input
+  clip-path: inset(0 60px 0 0)
+  text-transform: uppercase
+
+  &::-webkit-inner-spin-button,
+  &::-webkit-calendar-picker-indicator
+    display: none
+
+  &[value=""]:not(:focus)
+    color: transparent
+
+  &:focus, &:not([value=''])
+    & ~ .date-input__placeholder
+      display: none
+
+  &__placeholder
+    position: absolute
+    height: 100%
+
+    display: flex
+    align-items: center
+
+    padding-left: 20px
+    background: transparent
+    color: #E5E5E5
+    pointer-events: none
+    font-size: 1.5rem
 
 .input__btn
   display: block
+  position: absolute
+  right: 0
 
   height: 100%
-  padding: 0
-  padding-right: 20px
+  max-width: 60px
+  width: 100%
+
+  display: flex
+  align-items: center
+  justify-content: center
 
   &_icon
     display: block
+    width: 100%
     height: 50%
+
     fill: #E5E5E5
 
 .date-input__wrapper
