--- a/src/components/OrderPage/TicketDetails/style.sass
+++ b/src/components/OrderPage/TicketDetails/style.sass
@@ -145,7 +145,7 @@ $color-border-primary: $grey-light-2
 
 .icon
   display: block
-  max-width: 100%
+  width: 100%
   max-height: 100%
 
 .ticket-details__tickets-summary_currency
